--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+font-family: "Graphik-bold";
+src: url("./fonts/Graphik/GraphikCondensed-Bold-Trial.otf") format("opentype");
+font-style: normal;
+font-display: swap;
+}
+
+@font-face {
+    font-family: "Graphik";
+    src: url("./fonts/Graphik/GraphikCondensed-Regular-Trial.otf") format("opentype");
+    font-style: normal;
+    font-display: swap;
+    }
+
